codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__exec_flow__external_writer_snapshot_freezes_active_command_and_mcp_rows.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: "rendered.join(\"\\n---\\n\")"
---
● Ran sleep 5

---
● Called server.tool()
