codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__exec_flow__mcp_tool_scrolling_status_banner.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 34
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
● Called docs.search({"query":"test"})

● Analyzing (0s)


› Ask Codex to do anything

  Read Only        · gpt-5.6-sol default · /tmp/project
